logo and main screen logo

--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@
 }
 
 .logo {
+  width: auto;
   height: 32px;
-  background: rgba(255, 255, 255, 0.3);
-  margin: 16px;
+  margin: 14px;
 }
 
 .site-layout .site-layout-background {
